[package]
name = "chem-matcher"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
indicatif = "0.17.5"
rayon = "1.7.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
rust-stemmers = "1.2.0"