[package]
name = "chem-matcher"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
indicatif = "0.17.5"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
rust-stemmers = "1.2.0"
tokio = { version = "1", features = ["full"] }
flume = "0.10.14"
serde_json = "1.0.70"
tempdir = "0.3"
flate2 = "1.0.26"
